[gd_scene load_steps=5 format=2]

[ext_resource path="res://menus/default_theme.tres" type="Theme" id=1]
[ext_resource path="res://menus/InterviewUi.gd" type="Script" id=2]
[ext_resource path="res://assets/fonts/PixelOperatorMono8.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 4
font_data = ExtResource( 3 )

[node name="UI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
margin_bottom = 20.0
custom_constants/margin_right = 8
custom_constants/margin_top = 4
custom_constants/margin_left = 8
custom_constants/margin_bottom = 8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 8.0
margin_top = 4.0
margin_right = 312.0
margin_bottom = 36.0

[node name="ChallengerNameLabel" type="Label" parent="MarginContainer/VBoxContainer"]
margin_right = 304.0
margin_bottom = 5.0
custom_fonts/font = SubResource( 1 )
text = "sadf"

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 9.0
margin_right = 304.0
margin_bottom = 23.0
custom_constants/margin_left = 8

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer"]
margin_left = 8.0
margin_right = 304.0
margin_bottom = 14.0

[node name="RoundLabel" type="Label" parent="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer"]
margin_right = 16.0
margin_bottom = 5.0
size_flags_horizontal = 0
custom_fonts/font = SubResource( 1 )
text = "asdf"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChallengerPointsLabel" type="Label" parent="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer"]
margin_top = 9.0
margin_right = 16.0
margin_bottom = 14.0
size_flags_horizontal = 0
custom_fonts/font = SubResource( 1 )
text = "asdf"
align = 2
